; ModuleID = '/home/carl/AnghaBench/openssl/crypto/x509/extr_x509_req.c_X509_to_X509_REQ.c'
source_filename = "/home/carl/AnghaBench/openssl/crypto/x509/extr_x509_req.c_X509_to_X509_REQ.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_12__ = type { %struct.TYPE_11__ }
%struct.TYPE_11__ = type { %struct.TYPE_10__* }
%struct.TYPE_10__ = type { i32, i64* }

@X509_F_X509_TO_X509_REQ = common dso_local global i32 0, align 4
@ERR_R_MALLOC_FAILURE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_12__* @X509_to_X509_REQ(i32* %0, i32* %1, i32* %2) #0 {
  %4 = alloca %struct.TYPE_12__*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca %struct.TYPE_12__*, align 8
  %9 = alloca %struct.TYPE_11__*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  store i32* %0, i32** %5, align 8
  store i32* %1, i32** %6, align 8
  store i32* %2, i32** %7, align 8
  %12 = call %struct.TYPE_12__* (...) @X509_REQ_new()
  store %struct.TYPE_12__* %12, %struct.TYPE_12__** %8, align 8
  %13 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %14 = icmp eq %struct.TYPE_12__* %13, null
  br i1 %14, label %15, label %19

15:                                               ; preds = %3
  %16 = load i32, i32* @X509_F_X509_TO_X509_REQ, align 4
  %17 = load i32, i32* @ERR_R_MALLOC_FAILURE, align 4
  %18 = call i32 @X509err(i32 %16, i32 %17)
  br label %77

19:                                               ; preds = %3
  %20 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %21 = getelementptr inbounds %struct.TYPE_12__, %struct.TYPE_12__* %20, i32 0, i32 0
  store %struct.TYPE_11__* %21, %struct.TYPE_11__** %9, align 8
  %22 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %23 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %22, i32 0, i32 0
  %24 = load %struct.TYPE_10__*, %struct.TYPE_10__** %23, align 8
  %25 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %24, i32 0, i32 0
  store i32 1, i32* %25, align 8
  %26 = call i64* @OPENSSL_malloc(i32 1)
  %27 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %28 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %27, i32 0, i32 0
  %29 = load %struct.TYPE_10__*, %struct.TYPE_10__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %29, i32 0, i32 1
  store i64* %26, i64** %30, align 8
  %31 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %32 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %31, i32 0, i32 0
  %33 = load %struct.TYPE_10__*, %struct.TYPE_10__** %32, align 8
  %34 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %33, i32 0, i32 1
  %35 = load i64*, i64** %34, align 8
  %36 = icmp eq i64* %35, null
  br i1 %36, label %37, label %38

37:                                               ; preds = %19
  br label %77

38:                                               ; preds = %19
  %39 = load %struct.TYPE_11__*, %struct.TYPE_11__** %9, align 8
  %40 = getelementptr inbounds %struct.TYPE_11__, %struct.TYPE_11__* %39, i32 0, i32 0
  %41 = load %struct.TYPE_10__*, %struct.TYPE_10__** %40, align 8
  %42 = getelementptr inbounds %struct.TYPE_10__, %struct.TYPE_10__* %41, i32 0, i32 1
  %43 = load i64*, i64** %42, align 8
  %44 = getelementptr inbounds i64, i64* %43, i64 0
  store i64 0, i64* %44, align 8
  %45 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %46 = load i32*, i32** %5, align 8
  %47 = call i32 @X509_get_subject_name(i32* %46)
  %48 = call i32 @X509_REQ_set_subject_name(%struct.TYPE_12__* %45, i32 %47)
  %49 = icmp ne i32 %48, 0
  br i1 %49, label %51, label %50

50:                                               ; preds = %38
  br label %77

51:                                               ; preds = %38
  %52 = load i32*, i32** %5, align 8
  %53 = call i32* @X509_get0_pubkey(i32* %52)
  store i32* %53, i32** %11, align 8
  %54 = load i32*, i32** %11, align 8
  %55 = icmp eq i32* %54, null
  br i1 %55, label %56, label %57

56:                                               ; preds = %51
  br label %77

57:                                               ; preds = %51
  %58 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %59 = load i32*, i32** %11, align 8
  %60 = call i32 @X509_REQ_set_pubkey(%struct.TYPE_12__* %58, i32* %59)
  store i32 %60, i32* %10, align 4
  %61 = load i32, i32* %10, align 4
  %62 = icmp ne i32 %61, 0
  br i1 %62, label %64, label %63

63:                                               ; preds = %57
  br label %77

64:                                               ; preds = %57
  %65 = load i32*, i32** %6, align 8
  %66 = icmp ne i32* %65, null
  br i1 %66, label %67, label %75

67:                                               ; preds = %64
  %68 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %69 = load i32*, i32** %6, align 8
  %70 = load i32*, i32** %7, align 8
  %71 = call i32 @X509_REQ_sign(%struct.TYPE_12__* %68, i32* %69, i32* %70)
  %72 = icmp ne i32 %71, 0
  br i1 %72, label %74, label %73

73:                                               ; preds = %67
  br label %77

74:                                               ; preds = %67
  br label %75

75:                                               ; preds = %74, %64
  %76 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  store %struct.TYPE_12__* %76, %struct.TYPE_12__** %4, align 8
  br label %80

77:                                               ; preds = %73, %63, %56, %50, %37, %15
  %78 = load %struct.TYPE_12__*, %struct.TYPE_12__** %8, align 8
  %79 = call i32 @X509_REQ_free(%struct.TYPE_12__* %78)
  store %struct.TYPE_12__* null, %struct.TYPE_12__** %4, align 8
  br label %80

80:                                               ; preds = %77, %75
  %81 = load %struct.TYPE_12__*, %struct.TYPE_12__** %4, align 8
  ret %struct.TYPE_12__* %81
}

declare dso_local %struct.TYPE_12__* @X509_REQ_new(...) #1

declare dso_local i32 @X509err(i32, i32) #1

declare dso_local i64* @OPENSSL_malloc(i32) #1

declare dso_local i32 @X509_REQ_set_subject_name(%struct.TYPE_12__*, i32) #1

declare dso_local i32 @X509_get_subject_name(i32*) #1

declare dso_local i32* @X509_get0_pubkey(i32*) #1

declare dso_local i32 @X509_REQ_set_pubkey(%struct.TYPE_12__*, i32*) #1

declare dso_local i32 @X509_REQ_sign(%struct.TYPE_12__*, i32*, i32*) #1

declare dso_local i32 @X509_REQ_free(%struct.TYPE_12__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
